Add global button color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,4 +4,5 @@
   --logo-font: 'Orbitron', sans-serif;
   --main-heading-font: 'Dongle', sans-serif;
   --main-body-bg: #ddfcff;
+  --main-button-color: #9bc9e7;
 }
