--- a/src/pages/login/loginstyle.module.css
+++ b/src/pages/login/loginstyle.module.css
@@ -33,7 +33,7 @@
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 .FieldContainer > button {
-  background-color: #9bc9e7;
+  background-color: var(--main-button-color);
   color: white;
   margin: 30px 0px;
 }
