Update Madrack Home page and update dashboard of users

--- a/src/components/header/styling.module.css
+++ b/src/components/header/styling.module.css
@@ -5,8 +5,9 @@
     color: white;
 }
 .MainHeaderSec1 h2{
-    font-family: var(--logo-font);
+    font-family: var(--small-headings);
     color: white;
+    font-weight: 600;
 }
 .MainHeaderSec2{
     text-align: right;
